# DSREquipmentSwap

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DSRWeaponSwap.json  README.md  clang-format.ps1
.github/workflows/: build.yml
include/DSRWeaponSwap/: EquipmentSwap.h
src/: CMakeLists.txt  dllmain.cpp  main.cpp
src/DSREquipmentSwap/: Armor.h  CMakeLists.txt  Config.h  DSREquipmentSwapConfigTemplate.json  EquipmentSwapper.cpp  EquipmentSwapper.h  Ring.h  SwapTrigger.cpp  SwapTrigger.h  Weapon.h  armor.cpp  armor.hpp  config.cpp  config.hpp  dllmain.cpp  equipment.cpp  equipment.hpp  main.cpp  ring.cpp  ring.hpp  tools.hpp  weapon.cpp  weapon.hpp
src/DSREquipmentSwap/swap/: config.cpp  config.hpp  equipment.cpp  equipment.hpp
src/DSRWeaponSwap/: EquipmentSwap.cpp  EquipmentSwap.h  SwapConfig.cpp  SwapConfig.h
